headers/volt.h

typedef struct VoltStatus {
    uint8_t     ready; /* 0x00-busy, 0x01-ready to use */
    uint8_t     active;
    uint64_t    allocated_memory;
} VoltStatus;
typedef struct VoltPage {
    uint8_t         state; /* 0x00-free, 0x01-alive, 0x02-invalid */
    uint8_t         *data;
} VoltPage;
typedef struct VoltBlock {
    uint16_t        id;
    uint16_t        life; /* available writes before die */
    VoltPage        *next_pg;
    VoltPage        *pages;
} VoltBlock;
typedef struct VoltLun {
    VoltBlock       *blk_offset;
} VoltLun;
typedef struct VoltCh {
    VoltLun         *lun_offset;
} VoltCh;
typedef struct VoltCtrl {
    VoltStatus      status;
    VoltBlock       *blocks;
    VoltLun         *luns;
    VoltCh          *channels;
    uint8_t         *edma; /* emergency DMA buffer for timeout requests */

} VoltCtrl;
struct volt_dma {
    uint8_t         *virt_addr;
    uint32_t        prp_index;
    uint8_t         status; /* nand status */
};
struct volt_info {
    struct nvm_channel *channel_array;
    uint32_t 		n_channels;
};
/* Extended ssd_os functions */
int volt_get_ch_info (struct volt_info *ch_info);
int volt_get_geometry (struct nvm_mmgr_geometry *g);
int volt_get_last_address (void *ptr);