src/bindings/generated.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VoltCh {
    pub lun_offset: *mut VoltLun,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VoltCtrl {
    pub status: VoltStatus,
    pub blocks: *mut VoltBlock,
    pub luns: *mut VoltLun,
    pub channels: *mut VoltCh,
    pub edma: *mut u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct volt_dma {
    pub virt_addr: *mut u8,
    pub prp_index: u32,
    pub status: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct volt_info {
    pub channel_array: *mut nvm_channel,
    pub n_channels: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_ftl {
    pub _address: u8,
}
unsafe extern "C" {
    pub fn lring_flag_on(ring: *mut lring, flag: ::core::ffi::c_int);
    pub fn lring_flag_off(ring: *mut lring, flag: ::core::ffi::c_int);
    pub fn lring_flag_check(
        ring: *mut lring,
        flag: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
    pub fn lring_create(
        name: *mut ::core::ffi::c_char,
        size: ::core::ffi::c_int,
        mem: *mut ::core::ffi::c_void,
        flags: ::core::ffi::c_int,
    ) -> *mut lring;
    pub fn lring_print(ring: *mut lring);
    pub fn ox_dma(dma: *mut nvm_dma) -> ::core::ffi::c_int;
    pub fn program_load(elf: *mut u8, size: u32) -> ::core::ffi::c_int;
    pub fn program_pipe(file: *mut u8) -> ::core::ffi::c_int;
    pub fn program_connect(file: *mut u8) -> ::core::ffi::c_int;
    pub fn loader_extensions_print();
    pub fn loader_stages_print();
    pub fn loader_connectors_print();
    pub fn timer_interrupt_on(
        interval: ::core::ffi::c_int,
        function: *mut ::core::ffi::c_void,
    );
    pub fn timer_interrupt_off();
    pub fn thread_yield(
        cpu: ::core::ffi::c_int,
        thread: ssd_os_thread,
        context: *mut ::core::ffi::c_void,
    ) -> ::core::ffi::c_int;
    pub fn ssd_os_print_s(s: *const ::core::ffi::c_char);
    pub fn ssd_os_print_c(c: ::core::ffi::c_char);
    pub fn ssd_os_print_i(x: ::core::ffi::c_ulong);
    pub fn ssd_os_print_h(x: ::core::ffi::c_ulong);
    pub fn ssd_os_print_ss(
        s1: *const ::core::ffi::c_char,
        s2: *const ::core::ffi::c_char,
    );
    pub fn ssd_os_print_ss_l(
        s1: *const ::core::ffi::c_char,
        s2: *const ::core::ffi::c_char,
    );
    pub fn ssd_os_print_sis(
        s1: *const ::core::ffi::c_char,
        i: ::core::ffi::c_ulong,
        s2: *const ::core::ffi::c_char,
    );
    pub fn ssd_os_print_sis_l(
        s1: *const ::core::ffi::c_char,
        i: ::core::ffi::c_ulong,
        s2: *const ::core::ffi::c_char,
    );
    pub fn ssd_os_print_shs(
        s1: *const ::core::ffi::c_char,
        h: ::core::ffi::c_ulong,
        s2: *const ::core::ffi::c_char,
    );
    pub fn ssd_os_print_shs_l(
        s1: *const ::core::ffi::c_char,
        h: ::core::ffi::c_ulong,
        s2: *const ::core::ffi::c_char,
    );
    pub fn ssd_os_print_lock();
    pub fn ssd_os_print_unlock();
    pub fn ssd_os_ncores() -> ::core::ffi::c_int;
    pub fn ssd_os_this_cpu(name: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
    pub fn ssd_os_mem_get(key: ::core::ffi::c_int) -> *mut ::core::ffi::c_void;
    pub fn ssd_os_mem_size(key: ::core::ffi::c_int) -> ::core::ffi::c_int;
    pub fn ssd_os_mem_nregions() -> ::core::ffi::c_int;
    pub fn ssd_os_mem_cpy(
        dest: *mut ::core::ffi::c_void,
        src: *const ::core::ffi::c_void,
        n: u32,
    ) -> *mut ::core::ffi::c_void;
    pub fn ssd_os_sleep(sec: ::core::ffi::c_int);
    pub fn ssd_os_msleep(msec: ::core::ffi::c_int);
    pub fn ssd_os_usleep(usec: ::core::ffi::c_int);
    pub fn ssd_os_timer_interrupt_on(
        interval: ::core::ffi::c_int,
        function: *mut ::core::ffi::c_void,
    );
    pub fn ssd_os_timer_interrupt_off();
    pub fn ssd_os_lring_create(
        name: *mut ::core::ffi::c_char,
        size: ::core::ffi::c_int,
        mem: *mut ::core::ffi::c_void,
        flags: ::core::ffi::c_int,
    ) -> *mut lring;
    pub fn ssd_os_lring_enqueue(
        ring: *mut lring,
        entry: *mut lring_entry,
    ) -> ::core::ffi::c_int;
    pub fn ssd_os_lring_enqueue_m(
        ring: *mut lring,
        entry: *mut lring_entry,
    ) -> ::core::ffi::c_int;
    pub fn ssd_os_lring_dequeue(
        ring: *mut lring,
        entry: *mut lring_entry,
    ) -> ::core::ffi::c_int;
    pub fn ssd_os_lring_dequeue_m(
        ring: *mut lring,
        entry: *mut lring_entry,
    ) -> ::core::ffi::c_int;
    pub fn ssd_os_lring_print(ring: *mut lring);
    pub fn ssd_os_get_connection(
        connector_name: *mut ::core::ffi::c_char,
        pipe_name: *mut ::core::ffi::c_char,
    ) -> *mut pipeline;
    pub fn volt_get_ch_info(ch_info: *mut volt_info) -> ::core::ffi::c_int;
    pub fn volt_get_geometry(g: *mut nvm_mmgr_geometry) -> ::core::ffi::c_int;
    pub fn volt_get_last_address(ptr: *mut ::core::ffi::c_void) -> ::core::ffi::c_int;
}
